--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,12 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+mark{
+    background-color: #83e6e1;
+    opacity: 0.7
+}
+.phrase{
+    text-align: center;
+    font-style: italic;
+}
