fix: bugfix of adsense

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,11 @@
   {% endfor %}
 {% endif %}
 
+{% if page.layout == 'post' %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7643870591413979"
+     crossorigin="anonymous"></script>
+{% endif %}
+
 <!-- Mathjax Support -->
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
